--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ axum = { version = "0.6.4", optional = true }
 console_error_panic_hook = "0.1"
 console_log = "1"
 cfg-if = "1"
-leptos = { version = "0.4", features = ["nightly"] }
+leptos = { version = "0.4", features = ["serde", "nightly"] }
 leptos_axum = { version = "0.4", optional = true }
 leptos_meta = { version = "0.4", features = ["nightly"] }
 leptos_router = { version = "0.4", features = ["nightly"] }
@@ -25,6 +25,7 @@ thiserror = "1.0.38"
 tracing = { version = "0.1.37", optional = true }
 http = "0.2.8"
 chrono = "0.4.26"
+serde = "1.0.171"
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
