--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,10 +26,10 @@ tracing = { version = "0.1.37", optional = true }
 http = "0.2.8"
 chrono = "0.4.26"
 serde = "1.0.171"
-js-sys = "0.3.64"
+js-sys = {version = "0.3.64", optional = true}
 
 [features]
-hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
+hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "dep:js-sys"]
 ssr = [
     "dep:axum",
     "dep:tokio",
