--- a/example/start-axum/Cargo.toml
+++ b/example/start-axum/Cargo.toml
@@ -11,10 +11,10 @@ axum = { version = "0.6.4", optional = true }
 console_error_panic_hook = "0.1"
 console_log = "1"
 cfg-if = "1"
-leptos = { version = "0.4", features = ["serde", "nightly"] }
-leptos_axum = { version = "0.4", optional = true }
-leptos_meta = { version = "0.4", features = ["nightly"] }
-leptos_router = { version = "0.4", features = ["nightly"] }
+leptos = { version = "0.4.3", features = ["serde", "nightly"] }
+leptos_axum = { version = "0.4.3", optional = true }
+leptos_meta = { version = "0.4.3", features = ["nightly"] }
+leptos_router = { version = "0.4.3", features = ["nightly"] }
 log = "0.4"
 simple_logger = "4"
 tokio = { version = "1.25.0", optional = true }
@@ -25,10 +25,10 @@ thiserror = "1.0.38"
 tracing = { version = "0.1.37", optional = true }
 http = "0.2.8"
 serde = "1.0.171"
-leptos-query = { path = "../../" }
+leptos_query = { path = "../../" }
 
 [features]
-hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "leptos-query/hydrate"]
+hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "leptos_query/hydrate"]
 ssr = [
     "dep:axum",
     "dep:tokio",
