--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ repository = "https://github.com/nicoburniske/leptos_query"
 leptos = "0.4.3"
 cfg-if = "1"
 js-sys = {version = "0.3.64", optional = true}
+gloo-timers = { version = "0.2.6", features = ["futures"] }
 
 [features]
 hydrate = ["dep:js-sys"] 
