--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "leptos_query"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 authors = ["Nico Burniske"]
 description = "Async query manager for Leptos"
@@ -20,3 +20,6 @@ tokio = { version = "1.29.1", optional = true, features = ["time"]}
 [features]
 hydrate = ["dep:js-sys", "dep:gloo-timers"] 
 ssr = ["dep:tokio"]
+
+[package.metadata.docs.rs]
+all-features = true
