add logo to readme

--- a/example/start-axum/Cargo.toml
+++ b/example/start-axum/Cargo.toml
@@ -25,7 +25,7 @@ thiserror = "1.0.38"
 tracing = { version = "0.1.37", optional = true }
 http = "0.2.8"
 serde = "1.0.171"
-leptos_query = { path = "../../", optional = true}
+leptos_query = { path = "../../"}
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "leptos_query/hydrate"]
@@ -66,10 +66,10 @@ style-file = "style/main.scss"
 assets-dir = "public"
 
 # The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
-site-addr = "127.0.0.1:3000"
+site-addr = "127.0.0.1:3005"
 
 # The port to use for automatic reload monitoring
-reload-port = 3001
+reload-port = 3006
 
 # [Optional] Command to use when running end2end tests. It will run in the end2end dir.
 #   [Windows] for non-WSL use "npx.cmd playwright test"
