--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 repository = "https://github.com/nicoburniske/leptos_query"
 
 [dependencies]
-leptos = "0.4.5"
+leptos = "0.5.0-rc2"
 cfg-if = "1"
 js-sys = {version = "0.3.64", optional = true}
 gloo-timers = { version = "0.2.6", optional = true, features = ["futures"] }
