--- a/example/start-axum/Cargo.toml
+++ b/example/start-axum/Cargo.toml
@@ -7,24 +7,24 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-axum = { version = "0.6.4", optional = true }
+axum = { version = "0.7", optional = true }
 console_error_panic_hook = "0.1"
 console_log = "1"
 cfg-if = "1"
-leptos = { version = "0.5.0", features = ["serde", "nightly"] }
-leptos_axum = { version = "0.5.0", optional = true }
-leptos_meta = { version = "0.5.0", features = ["nightly"] }
-leptos_router = { version = "0.5.0", features = ["nightly"] }
+leptos = { version = "0.6", features = ["serde", "nightly"] }
+leptos_axum = { version = "0.6", optional = true }
+leptos_meta = { version = "0.6", features = ["nightly"] }
+leptos_router = { version = "0.6", features = ["nightly"] }
 log = "0.4"
 simple_logger = "4"
-tokio = { version = "1.25.0", optional = true }
+tokio = { version = "1.35", optional = true, features = ["rt-multi-thread"] }
 tower = { version = "0.4.13", optional = true }
-tower-http = { version = "0.4", features = ["fs"], optional = true }
-wasm-bindgen = "=0.2.87"
-thiserror = "1.0.38"
-tracing = { version = "0.1.37", optional = true }
-http = "0.2.8"
-serde = "1.0.171"
+tower-http = { version = "0.5", features = ["fs"], optional = true }
+wasm-bindgen = "=0.2.90"
+thiserror = "1.0"
+tracing = { version = "0.1", optional = true }
+http = "1"
+serde = "1.0"
 leptos_query = { path = "../../"}
 
 [features]
