--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ leptos = "0.6"
 cfg-if = "1"
 js-sys = {version = "0.3", optional = true}
 gloo-timers = { version = "0.3", optional = true, features = ["futures"] }
-tokio = { version = "1.35", optional = true, features = ["time"]}
+tokio = { version = "1", optional = true, features = ["time"]}
+slotmap = "1"
 
 [features]
 hydrate = ["dep:js-sys", "dep:gloo-timers"] 
