--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,28 +1,16 @@
-[package]
-name = "leptos_query"
-version = "0.4.2"
-edition = "2021"
-authors = ["Nico Burniske"]
-description = "Async query manager for Leptos"
-exclude = ["example/"]
-keywords = ["leptos"]
-license = "MIT"
-readme = "README.md"
-repository = "https://github.com/nicoburniske/leptos_query"
+[workspace]
+members = [ 
+    "devtools",
+    "query",
+]
+exclude = ["example"]
 
-[dependencies]
+[workspace.dependencies]
 leptos = "0.6"
 cfg-if = "1"
-js-sys = {version = "0.3", optional = true}
-gloo-timers = { version = "0.3", optional = true, features = ["futures"] }
-tokio = { version = "1", optional = true, features = ["time"]}
+js-sys = { version = "0.3" }
+gloo-timers = { version = "0.3", features = ["futures"] }
+tokio = { version = "1", features = ["time"] }
 slotmap = "1"
-futures-channel = "0.3.30"
-futures = "0.3.30"
-
-[features]
-hydrate = ["dep:js-sys", "dep:gloo-timers"] 
-ssr = ["dep:tokio"]
-
-[package.metadata.docs.rs]
-all-features = true
+futures-channel = "0.3"
+futures = "0.3"
