--- a/devtools/Cargo.toml
+++ b/devtools/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 cfg-if = { workspace = true } 
+js-sys = { workspace = true }
 leptos = { workspace = true }
 leptos_query = { path = "../query"}
 
