improve rustdoc examples

--- a/query/Cargo.toml
+++ b/query/Cargo.toml
@@ -26,6 +26,7 @@ csr = ["js-sys", "gloo-timers"]
 ssr = ["tokio"]
 
 [dev-dependencies]
+leptos_axum = "0.6.5"
 serde = "1"
 
 [package.metadata.docs.rs]
