--- a/example/start-axum/Cargo.toml
+++ b/example/start-axum/Cargo.toml
@@ -25,10 +25,17 @@ thiserror = "1.0"
 tracing = { version = "0.1", optional = true }
 http = "1"
 serde = "1.0"
-leptos_query = { path = "../../"}
+leptos_query = { path = "../../query", features = ["local_storage"] }
+leptos_query_devtools = { path = "../../devtools" }
 
 [features]
-hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "leptos_query/hydrate"]
+hydrate = [
+    "leptos/hydrate", 
+    "leptos_meta/hydrate", 
+    "leptos_router/hydrate", 
+    "leptos_query/hydrate", 
+    "leptos_query_devtools/csr",
+]
 ssr = [
     "dep:axum",
     "dep:tokio",
