--- a/query/Cargo.toml
+++ b/query/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "leptos_query"
-version = "0.4.2"
+version = "0.5.0"
 edition = "2021"
 authors = ["Nico Burniske"]
 description = "Async query manager for Leptos"
 exclude = ["example/"]
 keywords = ["leptos"]
 license = "MIT"
-readme = "README.md"
+readme = "../README.md"
 repository = "https://github.com/nicoburniske/leptos_query"
 
 [dependencies]
