--- a/example/leptos-query-axum-workspace/Cargo.toml
+++ b/example/leptos-query-axum-workspace/Cargo.toml
@@ -14,6 +14,9 @@ leptos_meta = { version = "0.6", features = ["nightly"] }
 leptos_router = { version = "0.6", features = ["nightly"] }
 leptos_axum = { version = "0.6" }
 
+leptos_query = { path = "../../query" }
+leptos_query_devtools = { path = "../../devtools" }
+
 axum = "0.7"
 cfg-if = "1"
 console_error_panic_hook = "0.1.7"
