--- a/example/leptos-query-axum-workspace/app/Cargo.toml
+++ b/example/leptos-query-axum-workspace/app/Cargo.toml
@@ -10,6 +10,8 @@ leptos.workspace = true
 leptos_meta.workspace = true
 leptos_router.workspace = true
 leptos_axum = { workspace = true, optional = true }
+leptos_query = { workspace = true }
+leptos_query_devtools = { workspace = true }
 
 http.workspace = true
 cfg-if.workspace = true
@@ -17,6 +19,6 @@ thiserror.workspace = true
 
 [features]
 default = []
-hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
-ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]
+hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "leptos_query/hydrate", "leptos_query_devtools/csr"]
+ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "leptos_query/ssr"]
 
