--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,4 +21,4 @@ jobs:
     - name: Run clippy
       run: cargo clippy --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo clippy --verbose -- -D warnings
