--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,4 +19,6 @@ jobs:
     - name: Build
       run: cargo build --verbose
     - name: Run tests
+      run: cargo test --verbose
+    - name: Run clippy
       run: cargo clippy --verbose -- -D warnings
