Persister for IndexDB (#25)
* indexdb working impl

* downgrade leptos version from 0.6.6 to 0.6.5 to fix resource transition

* breakup persister with feature flags

* initialize index_db with spawn local instead of waiting for first access.

* add async trait sized option to LocalStoragePersister server impl

* add comment on QueryPersister trait

* eager initialization of index_db with once_cell

* move db into struct instead of threadlocal

* update lock file for example

* remove comments

* allow dead code in CacheSize trait

* minor comment typo

--- a/query/Cargo.toml
+++ b/query/Cargo.toml
@@ -22,12 +22,15 @@ slotmap = { workspace = true }
 futures-channel = { workspace = true }
 futures = { workspace = true }
 async-trait = { version = "0.1" }
+indexed_db_futures = { version = "0.4", optional = true }
+async_cell = { version = "0.2.2", optional = true }
 
 [features]
-hydrate = ["js-sys", "web-sys", "gloo-timers"]
-csr = ["js-sys", "web-sys", "gloo-timers"]
+hydrate = ["js-sys", "web-sys", "gloo-timers", "async_cell"]
+csr = ["js-sys", "web-sys", "gloo-timers", "async_cell"]
 ssr = ["tokio"]
 local_storage = ["miniserde", "web-sys/Storage"]
+indexed_db = [ "miniserde", "indexed_db_futures"]
 
 [dev-dependencies]
 leptos_axum = "0.6.5"
