--- a/example/start-csr/Cargo.toml
+++ b/example/start-csr/Cargo.toml
@@ -18,6 +18,7 @@ leptos_query_devtools = { path = "../../devtools", features = ["csr", "force"]}
 gloo-timers = "0.3.0"
 serde = { version = "1.0" }
 reqwest = { version = "0.11.24", features = ["json"] }
+leptos-use = "0.10.3"
 
 # utils
 # strum = { version = "0.25", features = ["derive", "strum_macros"] }
