--- a/example/start-csr/Cargo.toml
+++ b/example/start-csr/Cargo.toml
@@ -19,6 +19,7 @@ gloo-timers = "0.3.0"
 serde = { version = "1.0" }
 reqwest = { version = "0.11.24", features = ["json"] }
 leptos-use = "0.10.3"
+leptos_theme = "0.1.2"
 
 # utils
 # strum = { version = "0.25", features = ["derive", "strum_macros"] }
