--- a/example/start-csr/package.json
+++ b/example/start-csr/package.json
@@ -6,6 +6,7 @@
   "dependencies": {},
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "concurrently": "^8.2.2",
     "tailwindcss": "^3.4.1"
   }
