--- a/devtools/package.json
+++ b/devtools/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "tailwind": "bunx tailwindcss -i ./input.css -o ./src/styles.css --watch --minify"
+  },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.17",
